# auditiq

./: .env.example  .gitignore  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/src/auditiq/: __init__.py  config.py  dependencies.py  main.py  seeds.py
backend/src/auditiq/api/v1/: assessments.py  auth.py  dashboard.py  health.py  payments.py  reports.py  router.py  tenants.py
backend/src/auditiq/db/: engine.py
backend/src/auditiq/db/models/: __init__.py  assessment.py  consultant.py  payment.py  question.py  report.py  response.py  tenant.py
backend/src/auditiq/prompts/: report_system.py  report_user.py
backend/src/auditiq/schemas/: assessment.py  consultant.py  payment.py  report.py  tenant.py
backend/src/auditiq/services/: auth.py  question_engine.py  report_generator.py  scoring.py  stripe_service.py  subscription.py
backend/src/auditiq/utils/: industry.py
backend/tests/: conftest.py  test_auth.py  test_scoring.py
deploy/: auditiq-backend.service  auditiq-frontend.service  deploy.sh  docker-compose.prod.yml  nginx.conf
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/assess/: page.tsx
frontend/src/app/console/: page.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  ProgressBar.tsx
frontend/src/components/ui/: Badge.tsx  (+3 more)
frontend/src/lib/: api.ts  auth.ts  tenant.ts  utils.ts
frontend/src/types/: assessment.ts  report.ts
(+11 files in other folders)
