[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auditiq"
version = "0.1.0"
description = "AI Readiness Assessment Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "anthropic>=0.40.0",
    "stripe>=11.0.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "pyjwt>=2.9.0",
    "bcrypt>=4.0.0",
    "jinja2>=3.1.4",
    "weasyprint>=62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auditiq"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
